# GazeboRosPackages

./: .gitignore  .gitmodules  .gitreview  bitbucket-pipelines.yml  build_hbp_ros_packages.sh
hbp/: module_file.template  version
src/avatar_control_plugin/: CMakeLists.txt  package.xml
src/avatar_control_plugin/include/: avatar_control_plugin.h
src/avatar_control_plugin/sdf/: model.config  model.sdf
src/avatar_control_plugin/src/: avatar_control_plugin.cpp
src/cle_ros_msgs/: CMakeLists.txt  package.xml
src/cle_ros_msgs/msg/: CLEError.msg  CSVRecordedFile.msg  ClientLoggerMessage.msg  ExperimentPopulationInfo.msg  PopulationInfo.msg  RobotInfo.msg
src/cle_ros_msgs/srv/: CreateNewSimulation.srv  GetBrain.srv  GetTransferFunctions.srv  ResetSimulation.srv  SetBrain.srv  SetDuration.srv  SetTransferFunction.srv
src/controller_ros_gazebo_icub/: CMakeLists.txt  package.xml
src/controller_ros_gazebo_icub/src/: controller_ros_gazebo_icub.cpp
src/cpg_walking_controller/src/ros_cpg_wrapper/: CMakeLists.txt  package.xml  setup.py
src/cpg_walking_controller/src/ros_cpg_wrapper/action/: ros_cpg_parameters.action  ros_cpg_wrapper.action
src/cpg_walking_controller/src/ros_cpg_wrapper/include/ros_cpg_wrapper/: cpg_control.h
src/cpg_walking_controller/src/ros_cpg_wrapper/launch/: ros_cpg_node.launch  tools.launch
src/cpg_walking_controller/src/ros_cpg_wrapper/src/: cpg_control.cpp  cpg_control_wrapper.cpp
src/cpg_walking_controller/src/ros_cpg_wrapper/src/ros_cpg_wrapper/: CpgRosNode.py  CpgRosPublisher.py  HopfCpg2.py  __init__.py  _cpg_control_wrapper_py.py
src/demonstrator6/: CMakeLists.txt  package.xml
src/demonstrator6/scripts/: iba_cerebellum.py  iba_reactive_component.py  iba_stats_collector.py
src/demonstrator6/scripts/cerebellum/: bases.py  (+2 more)
src/demonstrator6_description/: CMakeLists.txt  package.xml
src/demonstrator6_description/config/: ros_controllers_eff_traj.yaml
src/demonstrator6_description/urdf/: gripper.urdf.xacro  iiwa.urdf.xacro  iiwa_gripper.urdf.xacro
src/gazebo_grasp_plugin/: CMakeLists.txt  package.xml
src/gazebo_grasp_plugin/include/gazebo_grasp_plugin/: GazeboGraspFix.h
src/gazebo_ros_muscle_interface/include/: gazebo_ros_muscle_interface.h
src/gazebo_ros_muscle_interface/src/: gazebo_ros_muscle_interface.cpp
src/gazebo_ros_pkgs/gazebo_msgs/: CMakeLists.txt  package.xml
src/gazebo_ros_pkgs/gazebo_msgs/msg/: JointPositions.msg
src/gazebo_ros_pkgs/gazebo_msgs/srv/: GetJointProperties.srv  GetModelProperties.srv  SetHuskyWheelSpeeds.srv  SetSensorNoiseProperties.srv
src/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
src/gazebo_ros_pkgs/gazebo_ros/: CMakeLists.txt  package.xml
src/gazebo_ros_pkgs/gazebo_ros_control/: CMakeLists.txt
src/gazebo_ros_pkgs/gazebo_ros_control/src/: default_robot_hw_sim.cpp
src/gazebo_ros_replay_plugins/: CMakeLists.txt  README.txt  package.xml
src/gazebo_ros_replay_plugins/include/: gazebo_ros_playback_plugin.h  gazebo_ros_recording_plugin.h  gazebo_ros_replay_plugin.h
src/gazebo_ros_replay_plugins/include/rosbag/: README.txt  player.h  recorder.h
src/gazebo_ros_replay_plugins/src/: gazebo_ros_playback_plugin.cpp  gazebo_ros_recording_plugin.cpp
src/gazebo_ros_replay_plugins/src/rosbag/: README.txt  player.cpp  recorder.cpp
src/generic_controller_plugin/: CMakeLists.txt
src/generic_controller_plugin/include/: generic_controller_plugin.h
src/generic_controller_plugin/src/: generic_controller_plugin.cpp
src/husky_gazebo_plugins/: CMakeLists.txt
src/husky_gazebo_plugins/src/: husky_plugin.cpp
src/iba_manager/: CMakeLists.txt  package.xml  setup.py
src/iba_manager/scripts/: external_module_manager.py
src/iba_manager/srv/: GetData.srv  SetData.srv
src/iba_multimodule_experiment/: CMakeLists.txt  package.xml
src/iba_multimodule_experiment/scripts/: module1.py  module2.py  module3.py
src/icub_initialization/: CMakeLists.txt  package.xml
src/icub_initialization/src/: icub_initialization.cpp
src/interactive_experiments/: CMakeLists.txt  package.xml
src/interactive_experiments/scripts/: myo_ros.py
src/kuka_iiwa_14_prismatic_gripper_config/: CMakeLists.txt  package.xml
src/kuka_iiwa_14_prismatic_gripper_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  positions.json  ros_controllers.yaml  trajectories.json
src/kuka_iiwa_14_prismatic_gripper_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo_controllers.launch  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch
src/kuka_iiwa_14_prismatic_gripper_config/scripts/: grasp_motion.py  specs.py
src/lamprey_control/: CMakeLists.txt  package.xml
src/lamprey_control/include/: lamprey_control_plugin.h
src/lamprey_control/src/: lamprey_control_plugin.cpp
src/pybullet_ant_plugin/: CMakeLists.txt  package.xml
src/pybullet_ant_plugin/include/: pybullet_ant_plugin.h
src/pybullet_ant_plugin/src/: pybullet_ant_plugin.cpp
src/rosbridge_suite-develop/rosbridge_server/: CMakeLists.txt
src/target_reaching_common/: CMakeLists.txt  README.md  package.xml  setup.py
src/target_reaching_nengo/: CMakeLists.txt  README.md  package.xml  setup.py
src/target_reaching_nengo/launch/: hbp_mapping.launch  main_TR_CL_nengo.launch  main_TR_CL_nengo_kuka.launch  spawn_model.launch  test.launch
src/target_reaching_nengo/nodes/: main_TR_CL_node.py  main_TR_CL_node.py.cfg  pub_kuka_target_position.py  spawn_model.py  target_reaching_to_hbp_mapping.py  target_reaching_to_kuka_mapping.py
src/tigrillo_plugin/: plugin_test.py
src/tigrillo_plugin/include/: tigrillo_plugin.h
src/tigrillo_plugin/src/: tigrillo_plugin.cpp
src/user_controller_plugin/: CMakeLists.txt  README.txt  package.xml
src/user_controller_plugin/include/: user_controller_plugin.h
src/user_controller_plugin/src/: user_controller_plugin.cpp
src/whiskeye_plugin/: CMakeLists.txt  CMakeListsxxx.txt  package.xml
src/whiskeye_plugin/include/: libwhiskeye_gazebo.h  whisker_pose.h
src/whiskeye_plugin/msg/: bridge_u.msg
src/whiskeye_plugin/src/: libwhiskeye_gazebo.cpp
(+64 files in other folders)
