<?xml version="1.0"?>
<package>
  <name>avatar_control_plugin</name>
  <version>0.0.1</version>
  <description>A controller plugin package designed to allow users to control an avatar, etc. via topics</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="webers@in.tum.de">Sandro Weber</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
