<?xml version="1.0"?>
<package>
  <name>gazebo_grasp_plugin</name>
  <version>1.0.1</version>
  <description>
        Gazebo Model plugin(s) which handle/help grasping in Gazebo.
  </description>

  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/JenniferBuehler/gazebo-pkgs/wiki/The-Gazebo-grasp-fix-plugin</url>
  
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
