<?xml version="1.0"?>
<package>
  <name>gazebo_ros_replay_plugins</name>
  <version>0.0.1</version>
  <description>A package for Gazebo/ROS recording and synchronized playback in the NRP.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kenny.sharma@tum.de">Kenny Sharma</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cle_ros_msgs</build_depend>
  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cle_ros_msgs</run_depend>

</package>
