<?xml version="1.0"?>
<package>
  <name>whiskeye_plugin</name>
  <version>1.0.0</version>
  <description>Plugin for NRP WhiskEye robot</description>
  <maintainer email="martin.pearson@brl.ac.uk">Martin Pearson</maintainer>
  <license>BSD</license>
  <author>Ben Mitch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
    
  
  
  <run_depend>tf</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_runtime</run_depend>
  <run_depend>image_transport</run_depend>
</package>
